[workspace]
members = [
  "core",
  "diesel-util",
  "proc-macros",
]
exclude = ["foo"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Trey Lowerison"]
rust-version = "1.70.0"

[workspace.dependencies]
anyhow = "1"
async-backtrace = "^0.2"
async-graphql-4 = { package = "async-graphql", version = "4", features = ["chrono"] }
async-graphql-5 = { package = "async-graphql", version = "5", features = ["chrono"] }
async-trait = "^0.1"
cast_trait_object = "0.1"
cfg-if = "1"
chrono = { version = "^0.4", features = ["serde"] }
color-eyre = "0"
convert_case = "^0.6"
derivative = "2"
derive_more.git = "https://github.com/tlowerison/derive_more"
diesel = { version = "2", features = ["chrono"] }
diesel-async = "^0.3"
diesel_migrations = "2"
dyn-clone = "1.0"
either = "1"
futures = "^0.3"
indexmap = "2"
itertools = "^0.10"
lazy_static = "1"
mobc = "^0.7"
once_cell = "1"
paste = "1"
proc-macro2 = "1"
proc-macro-util = { git = "https://github.com/tlowerison/proc-macro-util", rev = "a06c7e4" }
quote = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
scoped-futures = "^0.1"
syn = "1"
thiserror = "1"
tokio = { version = "1", features = ["rt", "sync"] }
tracing = "^0.1"
typed-builder = "0.12"
uuid = { version = "1", features = ["serde", "v4"] }
