[package]
name = "diesel-util-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
async-backtrace.workspace = true
async-trait.workspace = true
cast_trait_object.workspace = true
cfg-if.workspace = true
chrono.workspace = true
derivative.workspace = true
derive_more.workspace = true
diesel.workspace = true
diesel-async.workspace = true
dyn-clone.workspace = true
either.workspace = true
futures.workspace = true
itertools.workspace = true
lazy_static.workspace = true
page-util.workspace = true
once_cell.workspace = true
serde.workspace = true
serde_json.workspace = true
scoped-futures.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true

anyhow = { workspace = true, optional = true }
color-eyre = { workspace = true, optional = true }
mobc = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }

[features]
anyhow = ["dep:anyhow"]
color-eyre = ["dep:color-eyre"]
bb8 = ["diesel-async/bb8"]
deadpool = ["diesel-async/deadpool"]
mobc = ["diesel-async/mobc", "dep:mobc"]
mysql = ["diesel/mysql", "diesel-async/mysql", "page-util/mysql"]
postgres = ["diesel/postgres", "diesel-async/postgres", "page-util/postgres"]
tracing = ["dep:tracing"]
tracing-args = ["tracing"]
tracing-full = ["tracing", "tracing-args", "tracing-ret"]
tracing-ret = ["tracing"]
