[package]
name = "diesel-util"
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
derivative.workspace = true
diesel.workspace = true
paste.workspace = true
scoped-futures.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true

core = { path = "../core", package = "diesel-util-core" }
proc-macros = { path = "../proc-macros", package = "diesel-util-proc-macros" }

[features]
async-graphql-4 = ["core/async-graphql-4"]
async-graphql-5 = ["core/async-graphql-5"]
bb8 = ["core/bb8"]
deadpool = ["core/deadpool"]
mobc = ["core/mobc"]
mysql = ["core/mysql"]
postgres = ["core/postgres"]
