[package]
name = "diesel-util"
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
derivative.workspace = true
diesel.workspace = true
paste.workspace = true
scoped-futures.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true

anyhow = { workspace = true, optional = true }
color-eyre = { workspace = true, optional = true }

core = { path = "../core", package = "diesel-util-core" }
proc-macros = { path = "../proc-macros", package = "diesel-util-proc-macros" }

[features]
default = ["anyhow"]
anyhow = ["dep:anyhow", "core/anyhow"]
color-eyre = ["dep:color-eyre", "core/color-eyre"]
bb8 = ["core/bb8"]
deadpool = ["core/deadpool"]
mobc = ["core/mobc"]
mysql = ["core/mysql"]
postgres = ["core/postgres"]
tracing = ["core/tracing"]
tracing-args = ["core/tracing-args"]
tracing-full = ["core/tracing-full"]
tracing-ret = ["core/tracing-ret"]
